crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E115_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E11.py:9:1: E999 SyntaxError: Expected an indented block after `if` statement
   |
 7 | #: E112
 8 | if False:
 9 | print()
   | ^ E999
10 | #: E113
11 | print()
   |

E11.py:12:1: E999 SyntaxError: Unexpected indentation
   |
10 | #: E113
11 | print()
12 |     print()
   | ^ E999
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   |

E11.py:14:1: E999 SyntaxError: Expected a statement
   |
12 |     print()
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   | ^ E999
15 |      # 'httpd/unix-directory'
16 | create_date = False
   |

E11.py:30:1: E115 Expected an indented block (comment)
   |
28 | def start(self):
29 |     if True:
30 | #       try:
   |  E115
31 | #           self.master.start()
32 | #       except MasterExit:
   |

E11.py:31:1: E115 Expected an indented block (comment)
   |
29 |     if True:
30 | #       try:
31 | #           self.master.start()
   |  E115
32 | #       except MasterExit:
33 | #           self.shutdown()
   |

E11.py:32:1: E115 Expected an indented block (comment)
   |
30 | #       try:
31 | #           self.master.start()
32 | #       except MasterExit:
   |  E115
33 | #           self.shutdown()
34 | #       finally:
   |

E11.py:33:1: E115 Expected an indented block (comment)
   |
31 | #           self.master.start()
32 | #       except MasterExit:
33 | #           self.shutdown()
   |  E115
34 | #       finally:
35 | #           sys.exit()
   |

E11.py:34:1: E115 Expected an indented block (comment)
   |
32 | #       except MasterExit:
33 | #           self.shutdown()
34 | #       finally:
   |  E115
35 | #           sys.exit()
36 |         self.master.start()
   |

E11.py:35:1: E115 Expected an indented block (comment)
   |
33 | #           self.shutdown()
34 | #       finally:
35 | #           sys.exit()
   |  E115
36 |         self.master.start()
37 | #: E117
   |

E11.py:45:1: E999 SyntaxError: Expected an indented block after `if` statement
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^ E999
46 | #:
47 | if False:
   |
