crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E116_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E11.py:9:1: E999 SyntaxError: Expected an indented block after `if` statement
   |
 7 | #: E112
 8 | if False:
 9 | print()
   | ^ E999
10 | #: E113
11 | print()
   |

E11.py:12:1: E999 SyntaxError: Unexpected indentation
   |
10 | #: E113
11 | print()
12 |     print()
   | ^ E999
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   |

E11.py:14:1: E999 SyntaxError: Expected a statement
   |
12 |     print()
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   | ^ E999
15 |      # 'httpd/unix-directory'
16 | create_date = False
   |

E11.py:15:1: E116 Unexpected indentation (comment)
   |
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
15 |      # 'httpd/unix-directory'
   | ^^^^^ E116
16 | create_date = False
17 | #: E116 E116 E116
   |

E11.py:22:1: E116 Unexpected indentation (comment)
   |
20 |         self.master.start()
21 |         # try:
22 |             # self.master.start()
   | ^^^^^^^^^^^^ E116
23 |         # except MasterExit:
24 |             # self.shutdown()
   |

E11.py:24:1: E116 Unexpected indentation (comment)
   |
22 |             # self.master.start()
23 |         # except MasterExit:
24 |             # self.shutdown()
   | ^^^^^^^^^^^^ E116
25 |         # finally:
26 |             # sys.exit()
   |

E11.py:26:1: E116 Unexpected indentation (comment)
   |
24 |             # self.shutdown()
25 |         # finally:
26 |             # sys.exit()
   | ^^^^^^^^^^^^ E116
27 | #: E115 E115 E115 E115 E115 E115
28 | def start(self):
   |

E11.py:45:1: E999 SyntaxError: Expected an indented block after `if` statement
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^ E999
46 | #:
47 | if False:
   |
