crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E117_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E11.py:6:1: E117 Over-indented
  |
4 | #: E111 E117
5 | if True:
6 |      print()
  | ^^^^^ E117
7 | #: E112
8 | if False:
  |

E11.py:9:1: E999 SyntaxError: Expected an indented block after `if` statement
   |
 7 | #: E112
 8 | if False:
 9 | print()
   | ^ E999
10 | #: E113
11 | print()
   |

E11.py:12:1: E999 SyntaxError: Unexpected indentation
   |
10 | #: E113
11 | print()
12 |     print()
   | ^ E999
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   |

E11.py:14:1: E999 SyntaxError: Expected a statement
   |
12 |     print()
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   | ^ E999
15 |      # 'httpd/unix-directory'
16 | create_date = False
   |

E11.py:39:1: E117 Over-indented
   |
37 | #: E117
38 | def start():
39 |         print()
   | ^^^^^^^^ E117
40 | #: E117 W191
41 | def start():
   |

E11.py:42:1: E117 Over-indented
   |
40 | #: E117 W191
41 | def start():
42 |         print()
   | ^^^^^^^^ E117
43 | #: E112
44 | if False:  #
   |

E11.py:45:1: E999 SyntaxError: Expected an indented block after `if` statement
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^ E999
46 | #:
47 | if False:
   |
