crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__white_space_syntax_error_compatibility.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E2_syntax_error.py:1:10: E999 SyntaxError: Expected an expression
  |
1 | a = (1 or)
  |          ^ E999
  |
